# venvs

./: .appveyor.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  MANIFEST.in  README.rst  appveyor.yml  mkenv.py  noxfile.py  pyproject.toml  release.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  vcs-requirements.txt  version.txt
.github/workflows/: ci.yml  coverage.yml  packaging.yml  zizmor.yml
docs/: conf.py  requirements.in  requirements.txt  spelling-wordlist.txt
mkenv/: __init__.py  __main__.py  _cli.py  bootstrap_script.py  common.py  converge.py  find.py  make.py  remove.py
mkenv/tests/: test_bootstrap.py  test_cli.py  test_common.py  test_converge.py  test_find.py  test_make.py  test_remove.py  utils.py
src/: config.rs  converge.rs  entry_points.rs  find.rs  locator.rs  main.rs  state.rs
venvs/: __init__.py  __main__.py  _cli.py  _config.py  bootstrap.py  bootstrap_script.py  common.py  converge.py  create.py  find.py  make.py  remove.py  temporary.py  updatepackages.py
venvs/tests/: test_bootstrap.py  test_common.py  test_config.py  test_converge.py  test_create.py  test_find.py  test_make.py  test_remove.py  test_temporary.py  utils.py
