[package]
name = "venvs"
version = "2026.5.1"
edition = "2024"
description = "A tool for managing virtualenvs via a declarative config file"
license = "MIT"

[[bin]]
name = "venvs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.18"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
toml = "1.1"
which = "8"

[dev-dependencies]
tempfile = "3"
