[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "venvs"
description = "A simpler tool for creating venvs in a central location"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["venv", "virtualenv", "virtualenvwrapper", "mkvirtualenv", "pipx"]
authors = [
  {email = "Julian+venvs@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "appdirs",
    "attrs>=19.2.0",
    "click",
    "filesystems>=0.23.0",
    "packaging",
    "pyrsistent",
    "toml>=0.10.0",
    "tomlkit",
    "tqdm",
    "virtualenv>=20",
]

[project.scripts]
venvs = "venvs._cli:main"

[project.urls]
Documentation = "https://venvs.readthedocs.io/"
Homepage = "https://github.com/Julian/venvs"
Issues = "https://github.com/Julian/venvs/issues/"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/Julian/venvs"

[tool.coverage.run]
branch = true
source = ["venvs"]
dynamic_context = "test_function"

[tool.doc8]
ignore = [
    "D001",  # one sentence per line, so max length doesn't make sense
]

[tool.isort]
combine_as_imports = true
from_first = true
include_trailing_comma = true
multi_line_output = 3

[tool.pyright]
exclude = [
    "**/tests/__init__.py",
    "**/tests/test_*.py",
]

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["B", "D", "E", "F", "Q", "UP", "W"]
ignore = [
  # raise SomeException(...) is fine.
  "B904",
  # It's fine to not have docstrings for magic methods.
  "D105",
  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
  "D200",
  # No blank lines before docstrings.
  "D203",
  # Start docstrings on the second line.
  "D212",
  # This rule misses sassy docstrings ending with ! or ?.
  "D400",
  # Section headers should end with a colon not a newline
  "D406",
  # Underlines aren't needed
  "D407",
  # Plz spaces after section headers
  "D412",
]
extend-exclude = ["suite"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"docs/*" = ["D"]
"venvs/tests/*" = ["D"]
"noxfile.py" = ["D"]
