[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "venvs"
dynamic = ["version"]
description = "A tool for managing virtualenvs via a declarative config file"
requires-python = ">=3.8"
readme = "README.rst"
keywords = ["venv", "virtualenv", "virtualenvwrapper", "mkvirtualenv", "pipx"]
authors = [
  { name = "Julian Berman", email = "Julian+venvs@GrayVines.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Rust",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/Julian/venvs"
Issues = "https://github.com/Julian/venvs/issues/"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/Julian/venvs"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "venvs"
strip = true
