[metadata]
name = venvs
url = https://github.com/Julian/venvs
description = "A simpler tool for creating venvs in a central location"
long_description = file: README.rst
author = "Julian Berman"
author_email = "Julian@GrayVines.com"
classifiers = 
	Development Status :: 3 - Alpha
	Operating System :: OS Independent
        License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    appdirs
    attrs
    click
    filesystems>=0.23.0
    packaging
    toml>=0.10.0
    tomlkit
    tqdm
    virtualenv

[options.entry_points]
console_scripts =
    venvs = venvs._cli:main

[flake8]
exclude = venvs/__init__.py

[doc8]
ignore-path =
    version.txt,
    .*/,
    _*/

[bdist_wheel]
universal = 1
