[metadata]
name = venvs
url = https://github.com/Julian/venvs
description = "A simpler tool for creating venvs in a central location"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = "Julian Berman"
author_email = "Julian+venvs@GrayVines.com"
classifiers = 
	Development Status :: 4 - Beta
	Operating System :: OS Independent
        License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6
install_requires =
    importlib_metadata;python_version<'3.8'
    appdirs
    attrs>=19.2.0
    click
    filesystems>=0.23.0
    packaging
    pyrsistent
    toml>=0.10.0
    tomlkit
    tqdm
    virtualenv>=20

[options.entry_points]
console_scripts =
    venvs = venvs._cli:main

[flake8]
exclude = venvs/__init__.py

[doc8]
ignore-path =
    version.txt,
    .*/,
    _*/

[bdist_wheel]
universal = 1
