[metadata]
name = venvs
url = https://github.com/Julian/venvs
description = "A simpler tool for creating venvs in a central location"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = "Julian Berman"
author_email = "Julian+venvs@GrayVines.com"
classifiers =
	Development Status :: 4 - Beta
	Operating System :: OS Independent
        License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6
install_requires =
    appdirs
    attrs>=19.2.0
    click
    filesystems>=0.23.0
    importlib_metadata;python_version<'3.8'
    packaging
    pyrsistent
    rich
    toml>=0.10.0
    tomlkit
    virtualenv>=20

[options.entry_points]
console_scripts =
    venvs = venvs._cli:main

[flake8]
inline-quotes = "
exclude = venvs/__init__.py
ignore =
    B008,  # Barring function calls in default args. Ha, no.
    B010,  # See https://github.com/PyCQA/flake8-bugbear/issues/122
    B306,  # See https://github.com/PyCQA/flake8-bugbear/issues/131
    W503,  # (flake8 default) old PEP8 boolean operator line breaks

[doc8]
ignore-path =
    version.txt,
    .*/,
    _*/

[bdist_wheel]
universal = 1
